<resources>

    <string name="app_name">FafEat</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="motto">First Arrive, First Eat</string>
    <string name="login">Login</string>
    <string name="register">Registrati</string>
    <string name="enter_email">Email</string>
    <string name="enter_password">Password</string>
    <string name="remember_me">Ricordami</string>
    <string name="forget_password">Password dimenticata?</string>
    <string name="create_account">Crea Account</string>
    <string name="chooseut">Come vuoi registrati?</string>
    <string name="enter_full_name">Nome completo</string>
    <string name="enter_phone_number">Cellulare</string>
    <string name="verify_code">Verifica</string>

    <string name="otp_code_text">Code</string>
    <string name="otp_verification_text">Verification</string>
    <string name="otp_description_text">Immetti codice di verifica</string>
    <string name="forget_password_detail">Immetti la mail di registrazione per resettare la tua password</string>
    <string name="make_selection_detail">Scegli quale metodo usare per resettare la tua password</string>
    <string name="make_selection">Scegli il metodo </string>
    <string name="via_sms">Via SMS</string>
</resources>