<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginSignup.ForgetPassword"
    android:background="@color/white"
    android:padding="30dp"
    android:transitionName="forget_transition">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/general_x"
            android:padding="5dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/lock_icon"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:fontFamily="@font/muli_black"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password_detail"
            android:textSize="18sp"
            android:fontFamily="@font/muli"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            android:hint="@string/enter_email"
            app:startIconDrawable="@drawable/icon_email"
            app:startIconTint="@color/black"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            android:textColorHint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/next_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="Avanti"
            android:background="@color/black"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:onClick="call_make_selection"
            android:transitionName="forget_transition"/>


    </LinearLayout>

</ScrollView>