<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginSignup.Make_selection"
    android:background="@color/white"
    android:padding="30dp"
    android:transitionName="forget_transition">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/general_x"
            android:padding="5dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_selection"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:fontFamily="@font/muli_black"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_selection_detail"
            android:textSize="18sp"
            android:fontFamily="@font/muli"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="50dp"
            android:background="@color/white"
            android:padding="10dp">

            <ImageView
                android:id="@+id/mobile_icon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/phone_icon"/>

            <TextView
                android:id="@+id/mobile_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/via_sms"
                android:textSize="25sp"
                android:fontFamily="@font/muli"
                android:layout_toRightOf="@+id/mobile_icon"/>

            <TextView
                android:id="@+id/mobile_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+393408475710"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:fontFamily="@font/muli"
                android:layout_below="@id/mobile_text"
                android:layout_toRightOf="@+id/mobile_icon"/>

            <Button
                android:id="@+id/mobile_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:transitionName="OTP_screen"
                android:onClick="call_OTP_verification"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:padding="10dp">

            <ImageView
                android:id="@+id/mail_icon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/icon_email"/>

            <TextView
                android:id="@+id/mail_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/via_sms"
                android:textSize="25sp"
                android:fontFamily="@font/muli"
                android:layout_toRightOf="@+id/mail_icon"/>

            <TextView
                android:id="@+id/mail_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="f.mancini699@gmail.com"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:fontFamily="@font/muli"
                android:layout_below="@id/mail_text"
                android:layout_toRightOf="@+id/mail_icon"/>
        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00000000"/>


    </LinearLayout>

</ScrollView>